Fix styling, table spacing in market-report page

--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,9 @@ footer {
 }
 
 /* MEDIA */
-img, video, audio, iframe{
-  max-width: 100%;
+img, video, audio, iframe, table, form{
+  width: 100%; /* IE */
+  max-width: 100%; /* FF, Safari, Chrome */
 }
 
 /* BACKGROUND */
